Fix background of exercise description in dark mode

--- a/app/assets/stylesheets/layout.css.less
+++ b/app/assets/stylesheets/layout.css.less
@@ -40,5 +40,5 @@ iframe {
 }
 
 .dodona-frame {
-  background: white;
+  background: @content-bg;
 }
